# MacUp

./: .gitignore  Install MacUp.command  README.md  macup  pyproject.toml
docs/: EDGE_CASE_AUDIT.md
macup_tool/: __init__.py  atomic.py  backup.py  cli.py  config.py  doctor.py  installer.py  keychain.py  launchd.py  logutil.py  manager.py  manager_state.py  paths.py  process.py  rclone_config.py  reset.py  restore.py  snapshots.py  status.py  timeutil.py  xbar.py
tests/: test_backup.py  test_bootstrap_script.py  test_config.py  test_integration_restic.py  test_launchd_xbar.py  test_manager_rclone_stage.py  test_manager_setup.py  test_manager_ui.py  test_rclone_config.py  test_reset.py  test_restore.py  test_snapshots.py  test_status.py
