[project]
name = "macup"
version = "0.1.0"
description = "Lightweight macOS Restic+rclone OneDrive backup tool with Xbar status."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
macup = "macup_tool.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["macup_tool"]
